[package]
name = "receiver"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cpal = "0.18"
crossbeam-queue = "0.3"
hound = "3.5"
lan-audio-common = { path = "../common" }
socket2 = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
