[package]
name = "sender"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cpal = "0.18"
lan-audio-common = { path = "../common" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Media_Multimedia"] }
